create datBan_GUI